--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,30 @@
   <name>VirtualIdentityManagementAPI</name>
   <description>VirtualIdentityManagementAPI</description>
   <licenses>
-	  <license>
-	    <name>GNU General Public License (GPL) Version 3</name>
-	    <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
-	  </license>
+	<license>
+	<name>GNU General Public License (GPL) Version 3</name>
+	<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
+	</license>
   </licenses>
   <repositories>
-	  <repository>
-	    <id>maven2-repository.dev.java.net</id>
-	    <name>Java.net Repository for Maven</name>
-	    <url>http://download.java.net/maven/2/</url>
-	    <layout>default</layout>
-	  </repository>
+	<repository>
+	<id>maven2-repository.dev.java.net</id>
+	<name>Java.net Repository for Maven</name>
+	<url>http://download.java.net/maven/2/</url>
+	<layout>default</layout>
+	</repository>
   </repositories>
   <dependencies>
-  	<dependency>
-  		<groupId>com.ricardolorenzo</groupId>
-  		<artifactId>SimpleFileUtils</artifactId>
-  		<version>0.1</version>
-  	</dependency>
+	<dependency>
+		<groupId>com.ricardolorenzo</groupId>
+		<artifactId>SimpleFileUtils</artifactId>
+		<version>0.1</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.mongodb</groupId>
+	  <artifactId>mongo-java-driver</artifactId>
+	  <version>2.12.4</version>
+	</dependency>
+
   </dependencies>
 </project>
